--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -156,16 +156,14 @@ h3. 5.Scripts GitExtension:
 Il peut être pratique de créer dans GitExtension les scripts décrit ci-dessous; ensuite disponibles par un clic droit dans le Browser de GitExtension.
 Pour cela, allez dans le menu "Settings"->"Settings..."->Onglet "Scripts" et ajoutez un ligne où on remplira les 3 champs requis par les valeurs séparées par le '/' :
 
-{border:1px solid black}.
-|Tfs(Tronc)> Fetch|git|tfs fetch|
-|Tfs(Tronc)> Fetch and Rebase|git|tfsrebase|
-|Tfs(Tronc)> Commit|git|tfscommit|
+{border:1px solid black}. |Tfs(Tronc)> Fetch|git|tfs fetch|
+{border:1px solid black}. |Tfs(Tronc)> Fetch and Rebase|git|tfsrebase|
+{border:1px solid black}. |Tfs(Tronc)> Commit|git|tfscommit|
 
 Pour info mais non utile:
 
-{border:1px solid black}.
-|Tfs(Tronc)> Commit|git|tfs rcheckin|
-|Tfs(Tronc)> Commit Visuel|git|tfs ct|
+{border:1px solid black}. |Tfs(Tronc)> Commit|git|tfs rcheckin|
+{border:1px solid black}. |Tfs(Tronc)> Commit Visuel|git|tfs ct|
 
 h3. 6.Gestion d'une branche de TFS:
 
@@ -225,17 +223,16 @@ h3. 7.Scripts GitExtension (suite):
 
 Menu "Settings"->"Settings..."->Onglet "Scripts" et ajoutez un ligne où on remplira les 3 champs requis par les valeurs séparées par le '/' :
 
-{border:1px solid black}.
-|Tfs(Branche)> Fetch|sh|-c "git tfs fetch -i $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
-|Tfs(Branche)> Fetch and rebase|sh|-c "git tfsrebasebranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
-|Tfs(Branche)> Commit|sh|-c "git tfscommitbranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
+{border:1px solid black}. |Tfs(Branche)> Fetch|sh|-c "git tfs fetch -i $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
+{border:1px solid black}. |Tfs(Branche)> Fetch and rebase|sh|-c "git tfsrebasebranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
+{border:1px solid black}. |Tfs(Branche)> Commit|sh|-c "git tfscommitbranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
 
 Note: Pour les utiliser, bien faire attention à cliquer sur la ligne du commit où se trouve la branche distante 'tfs/maBranche' (en vert, dans GitExtension)
 
 Pour info mais non utile:
 
-{border:1px solid black}.
-|Tfs(Branche)> Commit|sh|-c "git tfs rcheckin -i $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
+
+{border:1px solid black}. |Tfs(Branche)> Commit|sh|-c "git tfs rcheckin -i $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
 
 h3. 8.Travailler avec les shelvesets
 
@@ -282,9 +279,9 @@ git branch MaBranche d995afd => creation d'une branche sur un commit (en indiqua
 h2. Aperçu de Git-TF
 
 * C'est du Java
-* Par défaut, création d'un seul commit de merge (utiliser l'option - -deep pour réappliquer les commits locaux sur le serveur TFS)
+* Par défaut, création d'un seul commit de merge (utiliser l'option &ndash;&ndash;deep pour réappliquer les commits locaux sur le serveur TFS)
 * Association des workitems dans la ligne de commande (donc pas de possibilité d'utiliser depuis une GUI :( )
- et même association de workitems pour TOUS les commits (si utilisation de l'option - -deep. Et apparement il y aurait un bug :( )
+ et même association de workitems pour TOUS les commits (si utilisation de l'option &ndash;&ndash;deep. Et apparement il y aurait un bug :( )
 
 h2. Retour d'expérience
 
