Essai sur les tableaux

--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -156,7 +156,7 @@ h3. 5.Scripts GitExtension:
 Il peut être pratique de créer dans GitExtension les scripts décrit ci-dessous; ensuite disponibles par un clic droit dans le Browser de GitExtension.
 Pour cela, allez dans le menu "Settings"->"Settings..."->Onglet "Scripts" et ajoutez un ligne où on remplira les 3 champs requis par les valeurs séparées par le '/' :
 
-(table)
+(table).
 |_.Name|_.Command|_.Arguments|
 |Tfs(Tronc)> Fetch|git|tfs fetch|
 |Tfs(Tronc)> Fetch and Rebase|git|tfsrebase|
@@ -164,7 +164,7 @@ Pour cela, allez dans le menu "Settings"->"Settings..."->Onglet "Scripts" et ajo
 
 Pour info mais non utile:
 
-(table)
+(table).
 |_.Name|_.Command|_.Arguments|
 |Tfs(Tronc)> Commit|git|tfs rcheckin|
 |Tfs(Tronc)> Commit Visuel|git|tfs ct|
@@ -231,7 +231,7 @@ h3. 7.Scripts GitExtension (suite):
 
 Menu "Settings"->"Settings..."->Onglet "Scripts" et ajoutez un ligne où on remplira les 3 champs requis par les valeurs séparées par le '/' :
 
-(table)
+(table).
 |_.Name|_.Command|_.Arguments|
 |Tfs(Branche)> Fetch|sh|-c "git tfs fetch -i $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
 |Tfs(Branche)> Fetch and rebase|sh|-c "git tfsrebasebranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
@@ -241,7 +241,7 @@ Note: Pour les utiliser, bien faire attention à cliquer sur la ligne du commit 
 
 Pour info mais non utile:
 
-(table)
+(table).
 |_.Name|_.Command|_.Arguments|
 |Tfs(Branche)> Commit|sh|-c "git tfs rcheckin -i $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
 
