Prise en compte de la commande "init-branch" dans la version custom de git-tfs

--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -90,12 +90,12 @@ h3. 1. Clonage du dépôt TFS
 Commande de clone du dépot TFS avec historique (conseillé!):
 
 bc. git tfs clone http://monServeurTfs:8080/tfs/DepotTfs $/MonProjet/NomDuTronc .
-ex: git tfs clone https://tfs.codeplex.com:443/tfs/TFS16 $/valtechgittfs/trunk .
+ex: git tfs clone https://tfs.codeplex.com:443/tfs/TFS16 $/valtechgittfs/trunk . --username=vtccds_cp@snd --password=vtccds
 
 Commande de clone du dépot TFS sans historique:
 
 bc. git tfs quick-clone http://monServeurTfs:8080/tfs/DepotTfs $/MonProjet/NomDuTronc .
-ex: git tfs quick-clone https://tfs.codeplex.com:443/tfs/TFS16 $/valtechgittfs/trunk .
+ex: git tfs quick-clone https://tfs.codeplex.com:443/tfs/TFS16 $/valtechgittfs/trunk . --username=vtccds_cp@snd --password=vtccds
 
 Utilisation du login/mdp
 login:snd\[LoginCodePlex]_cp
@@ -177,30 +177,13 @@ Solution Facile (qu'on ne fera pas!!):
 * Inconvénients : on ne peut pas backporter des corrections
 
 Solution Plus convenable:
-Utiliser le script git-tfs-branch.sh depuis le répertoire git du projet ( ou https://gist.github.com/3760810 ou https://github.com/git-tfs/git-tfs/issues/172 ):
+Utiliser la "version perso de git-tfs":http://github.com/git-tfs/git-tfs/pull/232 contenant la commande "init-branch" :
 
-bc. sh ./git-tfs-branch.sh $/MyProject/MyTFSBranch myBranch [IdFirstCommitInTheBranch]
-
-Notes : 
-* Pour le nom "myBranch", éviter absolument les '.' et ' ' et mettre les paramètres entre '"' si besoin.
-* Le 3ème paramètre, correspondant à l'identifiant TFS du dernier commit commun entre le tronc et la branche. TFS n'est pas très utile pour le trouver :(
-Pour cela, depuis l'explorateur de code source de TFS, faire "Afficher l'historique" sur la branche, le n° de la dernière ligne étant le n° du 1er commit dans la branche.
-Il faut trouver le commit parent. A vous de jouer :( Bien souvent, il suffit de prendre le commit précédent (donc soustraire 1) mais c'est à vérifier absolument!!
+bc. git tfs init-branch $/MyProject/MyTFSBranch //Pour une branche spécifique
+git tfs all //Pour toutes les branches
 
 bc. ex :
-sh ./git-tfs-branch.sh $/valtechgittfs/branche1 branche1
-ou
-sh ./git-tfs-branch.sh $/valtechgittfs/branche1 branche1 16877
-
-Encore mieux! :
-Copie du script dans le répertoire binaires de Git, puis :
-
-bc. git config --global alias.tfsbranch '!sh git-tfs-branch.sh'
-
-Utilisation:
-
-bc. git tfsbranch $/ProjectRepository/BranchDirectory localBranchName [IdFirstCommitInTheBranch]
-ex: git tfsbranch $/valtechgittfs/branche1 branche1 16877
+git tfs init-branch $/valtechgittfs/branche1
 
 Récupération des commits d’une branche:
 
@@ -215,7 +198,7 @@ Pour synchroniser ses modifications avec la dernière version de la branche sur 
 
 Création de l'alias git :
 
-bc. git config --global alias.tfsrebasebranch '!sh -c "git tfs fetch -i $1 ; git stash save ; git rebase tfs/$1 ; git stash pop"'
+bc. git config --global alias.tfsrebasebranch '!sh -c "git tfs fetch -i $1 && git stash save && git rebase tfs/$1 && git stash pop"'
 
 Utilisation:  git tfsrebasebranch branche1
 
@@ -223,7 +206,7 @@ Pour commiter sur la brance sur TFS:
 
 Création de l'alias git :
 
-bc. git config --global alias.tfscommitbranch '!sh -c "git tfs fetch -i $1 ; git stash save ; git rebase tfs/$1 ; git tfs -i $1 rcheckin ; git stash pop"'
+bc. git config --global alias.tfscommitbranch '!sh -c "git tfs fetch -i $1 && git stash save && git rebase tfs/$1 && git tfs -i $1 rcheckin && git stash pop"'
 
 Utilisation: git tfscommitbranch branche1
 
