--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -162,7 +162,7 @@ Il peut être pratique de créer dans GitExtension les scripts décrit ci-dessou
 Pour cela, allez dans le menu "Settings"->"Settings..."->Onglet "Scripts" et ajoutez un ligne où on remplira les 3 champs requis par les valeurs séparées par le '/' :
 
 table(table_border).
-|_. Name|_. Command|_. Arguments|
+|_. Name|_. Cmd.|_. Arguments|
 |Tfs(Tronc)> Fetch|git|tfs fetch|
 |Tfs(Tronc)> Fetch and Rebase|git|tfsrebase|
 |Tfs(Tronc)> Commit|git|tfscommit|
@@ -170,7 +170,7 @@ table(table_border).
 Pour info mais non utile:
 
 table(table_border).
-|_. Name|_. Command|_. Arguments|
+|_. Name|_. Cmd.|_. Arguments|
 |Tfs(Tronc)> Commit|git|tfs rcheckin|
 |Tfs(Tronc)> Commit Visuel|git|tfs ct|
 
@@ -221,7 +221,7 @@ h3. 5.7.Scripts GitExtension (suite):
 Menu "Settings"->"Settings..."->Onglet "Scripts" et ajoutez un ligne où on remplira les 3 champs requis par les valeurs séparées par le '/' :
 
 table(table_border).
-|_. Name|_. Command|_. Arguments|
+|_. Name|_. Cmd.|_. Arguments|
 |Tfs(Branche)> Fetch|sh|-c "git tfs fetch -i $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
 |Tfs(Branche)> Fetch and rebase|sh|-c "git tfsrebasebranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
 |Tfs(Branche)> Commit|sh|-c "git tfscommitbranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
@@ -231,7 +231,7 @@ Note: Pour les utiliser, bien faire attention à cliquer sur la ligne du commit 
 Pour info mais non utile:
 
 table(table_border).
-|_. Name|_. Command|_. Arguments|
+|_. Name|_. Cmd.|_. Arguments|
 |Tfs(Branche)> Commit|sh|-c "git tfs rcheckin -i $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
 
 h3. 5.8.Travailler avec les shelvesets
